force-app/main/default/objects/MessagingSession/fields/ActionJSON__c.field-meta.xml
<CustomField>
    <fullName>ActionJSON__c</fullName>
    <label>Action JSON</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>