force-app/main/default/objects/MessagingSession/fields/Current_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Contact_Id__c</fullName>
    <description>The logged-in student's Contact Id, stamped by the LWC. Lets the guest-context agent identify the student for purchase/subscribe without relying on FilterState__c.</description>
    <label>Current Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>