force-app/main/default/objects/MessagingSession/fields/Current_Page__c.field-meta.xml
<CustomField>
    <fullName>Current_Page__c</fullName>
    <label>Current Page</label>
    <length>100</length>
    <type>Text</type>
</CustomField>