force-app/main/default/objects/MessagingSession/fields/Current_Video_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Video_Id__c</fullName>
    <label>Current Video Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>